--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@types/redux-persist": "^4.3.1",
     "@types/redux-thunk": "^2.1.0",
     "axios": "^1.4.0",
+    "chart.js": "^4.3.0",
     "dotenv": "^16.0.3",
     "formik": "^2.4.0",
     "jszip": "^3.10.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
@@ -60,6 +62,7 @@
     ]
   },
   "devDependencies": {
+    "@types/chart.js": "^2.9.37",
     "@types/react-helmet": "^6.1.6"
   }
 }
